# Learning-Symbolic-Taylor-Expansions-using-Seq2Seq-Models-with-Attention-and-Transformers

./: .gitignore  README.md  pyproject.toml  requirements.txt
faseroh/: Faseroh_project_gsoc2026_ml4sci.ipynb  faseroh_project.py  faseroh_project_gsoc.ipynb  faseroh_project_gsoc.py  faseroh_project_gsoc_2026_ml4sci.ipynb  faseroh_project_gsoc_ml4sci.ipynb
faseroh/scripts/: train_all.py
faseroh/src/: _init_.py  data.py  dataset.py  models.py  plot.py  tokenizer.py  train.py
