[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "faseroh"
version = "0.1.0"
description = "FASEROH – symbolic Taylor-series regression via seq2seq models"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "sympy>=1.12",
    "torch>=2.2",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
]

[project.scripts]
faseroh-train = "scripts.train_all:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]
